# sokol-experiment

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  configure.bat  configure.sh  main.c  sokol-sdl-graphics-backend-d3d.c  sokol-sdl-graphics-backend-gl.c  sokol-sdl-graphics-backend.h
assets/: README.md
imgui/: README.md  imgui_impl_sdl.c  imgui_impl_sdl.h
other/: array.c  array.h  camera.c  camera.h  frustum.c  frustum.h  mesh.c  mesh.h  texture.c  texture.h  triangle.h
shader/: info.txt  line.glsl  line.h  projected.glsl  projected.h  standard.glsl  standard.h
